# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("harfbuzz_config") {
  include_dirs = [ "src" ]
}

config("harfbuzz_warnings") {
  cflags = []
  if (is_clang) {
    cflags += [
      "-Wno-missing-field-initializers",
      "-Wno-unused-variable",
      "-Wno-sign-compare",
    ]
  }
}

source_set("harfbuzz_sources") {
  sources = [
    "src/hb-aat-layout-ankr-table.hh",
    "src/hb-aat-layout-bsln-table.hh",
    "src/hb-aat-layout-common-private.hh",
    "src/hb-aat-layout-common.hh",
    "src/hb-aat-layout-feat-table.hh",
    "src/hb-aat-layout-kerx-table.hh",
    "src/hb-aat-layout-morx-table.hh",
    "src/hb-aat-layout-private.hh",
    "src/hb-aat-layout-trak-table.hh",
    "src/hb-aat-layout.cc",
    "src/hb-aat-layout.hh",
    "src/hb-aat-map.cc",
    "src/hb-aat-map.hh",
    "src/hb-aat-ltag-table.hh",
    "src/hb-atomic-private.hh",
    "src/hb-atomic.hh",
    "src/hb-blob.cc",
    "src/hb-blob-private.hh",
    "src/hb-blob.h",
    "src/hb-blob.hh",
    "src/hb-buffer-deserialize-json.hh",
    "src/hb-buffer-deserialize-text.hh",
    "src/hb-buffer-private.hh",
    "src/hb-buffer-serialize.cc",
    "src/hb-buffer.cc",
    "src/hb-buffer.h",
    "src/hb-buffer.hh",
    "src/hb-common.cc",
    "src/hb-common.h",
    "src/hb-cache.hh",
    "src/hb-debug.hh",
    "src/hb-deprecated.h",
    "src/hb-dsalgs.hh",
    "src/hb-face.cc",
    "src/hb-face-private.hh",
    "src/hb-face.h",
    "src/hb-face.hh",
    "src/hb-font.cc",
    "src/hb-font-private.hh",
    "src/hb-font.h",
    "src/hb-font.hh",
    "src/hb-ft.h",
    "src/hb-ft.cc",
    "src/hb-icu.cc",
    "src/hb-icu.h",
    "src/hb-iter.hh",
    "src/hb-iter-private.hh",
    "src/hb-machinery-private.hh",
    "src/hb-machinery.hh",
    "src/hb-map.cc",
    "src/hb-map-private.hh",
    "src/hb-map.h",
    "src/hb-map.hh",
    "src/hb-mutex.hh",
    "src/hb-mutex-private.hh",
    "src/hb-null.hh",
    "src/hb-object.hh",
    "src/hb-object-private.hh",
    "src/hb-open-file.hh",
    "src/hb-open-file-private.hh",
    "src/hb-open-type.hh",
    "src/hb-open-type-private.hh",
    "src/hb-ot-cmap-table.hh",
    "src/hb-ot-color-cbdt-table.hh",
    "src/hb-ot-color-colr-table.hh",
    "src/hb-ot-color-cpal-table.hh",
    "src/hb-ot-color-sbix-table.hh",
    "src/hb-ot-color-svg-table.hh",
    "src/hb-ot-color.cc",
    "src/hb-ot-color.h",
    "src/hb-ot-face.cc",
    "src/hb-ot-face.hh",
    "src/hb-ot-font.cc",
    "src/hb-ot-font.h",
    "src/hb-ot-glyf-table.hh",
    "src/hb-ot-hdmx-table.hh",
    "src/hb-ot-head-table.hh",
    "src/hb-ot-hhea-table.hh",
    "src/hb-ot-hmtx-table.hh",
    "src/hb-ot-kern-table.hh",
    "src/hb-ot-layout-base-table.hh",
    "src/hb-ot-layout-common-private.hh",
    "src/hb-ot-layout-gdef-table.hh",
    "src/hb-ot-layout-gpos-table.hh",
    "src/hb-ot-layout-gsub-table.hh",
    "src/hb-ot-layout-gsubgpos-private.hh",
    "src/hb-ot-layout-jstf-table.hh",
    "src/hb-ot-layout-private.hh",
    "src/hb-ot-layout.cc",
    "src/hb-ot-layout.h",
    "src/hb-ot-layout.hh",
    "src/hb-ot-layout-common.hh",
    "src/hb-ot-layout-gsubpos.hh",
    "src/hb-ot-map-private.hh",
    "src/hb-ot-map.cc",
    "src/hb-ot-map.hh",
    "src/hb-ot-math-table.hh",
    "src/hb-ot-math.cc",
    "src/hb-ot-math.h",
    "src/hb-ot-maxp-table.hh",
    "src/hb-ot-name.cc",
    "src/hb-ot-name.h",
    "src/hb-ot-name-language.cc",
    "src/hb-ot-name-language.hh",
    "src/hb-ot-name-table.hh",
    "src/hb-ot-os2-table.hh",
    "src/hb-ot-os2-unicode-ranges.hh",
    "src/hb-ot-post-macroman.hh",
    "src/hb-ot-post-table.hh",
    "src/hb-ot-shape-complex-arabic-fallback.hh",
    "src/hb-ot-shape-complex-arabic-private.hh",
    "src/hb-ot-shape-complex-arabic-table.hh",
    "src/hb-ot-shape-complex-arabic-win1256.hh",
    "src/hb-ot-shape-complex-arabic.cc",
    "src/hb-ot-shape-complex-arabic.hh",
    "src/hb-ot-shape-complex-default.cc",
    "src/hb-ot-shape-complex-hangul.cc",
    "src/hb-ot-shape-complex-hebrew.cc",
    "src/hb-ot-shape-complex-indic-machine.hh",
    "src/hb-ot-shape-complex-indic-private.hh",
    "src/hb-ot-shape-complex-indic-table.cc",
    "src/hb-ot-shape-complex-indic.cc",
    "src/hb-ot-shape-complex-indic.hh",
    "src/hb-ot-shape-complex-khmer-machine.hh",
    "src/hb-ot-shape-complex-khmer-private.hh",
    "src/hb-ot-shape-complex-khmer.cc",
    "src/hb-ot-shape-complex-khmer.hh",
    "src/hb-ot-shape-complex-myanmar-machine.hh",
    "src/hb-ot-shape-complex-myanmar-private.hh",
    "src/hb-ot-shape-complex-myanmar.cc",
    "src/hb-ot-shape-complex-myanmar.hh",
    "src/hb-ot-shape-complex-private.hh",
    "src/hb-ot-shape-complex-thai.cc",
    "src/hb-ot-shape-complex-use-machine.hh",
    "src/hb-ot-shape-complex-use-private.hh",
    "src/hb-ot-shape-complex-use-table.cc",
    "src/hb-ot-shape-complex-use.cc",
    "src/hb-ot-shape-complex-use.hh",
    "src/hb-ot-shape-complex-vowel-constraints.cc",
    "src/hb-ot-shape-complex-vowel-constraints.hh",
    "src/hb-ot-shape-complex.hh",
    "src/hb-ot-shape-fallback-private.hh",
    "src/hb-ot-shape-fallback.cc",
    "src/hb-ot-shape-fallback.hh",
    "src/hb-ot-shape-normalize-private.hh",
    "src/hb-ot-shape-normalize.cc",
    "src/hb-ot-shape-normalize.hh",
    "src/hb-ot-shape-private.hh",
    "src/hb-ot-shape.cc",
    "src/hb-ot-shape.h",
    "src/hb-ot-shape.hh",
    "src/hb-ot-tag.cc",
    "src/hb-ot-tag.h",
    "src/hb-ot-tag-table.hh",
    "src/hb-ot-var-avar-table.hh",
    "src/hb-ot-var-fvar-table.hh",
    "src/hb-ot-var-hvar-table.hh",
    "src/hb-ot-var-mvar-table.hh",
    "src/hb-ot-var.cc",
    "src/hb-ot-var.h",
    "src/hb-ot-vorg-table.hh",
    "src/hb-ot.h",
    "src/hb-private.hh",
    "src/hb-set-digest-private.hh",
    "src/hb-set-private.hh",
    "src/hb-set.cc",
    "src/hb-set.h",
    "src/hb-set.hh",
    "src/hb-set-digest.hh",
    "src/hb-shape-plan-private.hh",
    "src/hb-shape-plan.cc",
    "src/hb-shape-plan.h",
    "src/hb-shape-plan.hh",
    "src/hb-shape.cc",
    "src/hb-shape.h",
    "src/hb-shaper-impl.hh",
    "src/hb-shaper-impl-private.hh",
    "src/hb-shaper-list.hh",
    "src/hb-shaper-private.hh",
    "src/hb-shaper.cc",
    "src/hb-shaper.hh",
    "src/hb-static.cc",
    "src/hb-string-array.hh",
    "src/hb-subset-glyf.cc",
    "src/hb-subset-glyf.hh",
    "src/hb-subset-input.cc",
    "src/hb-subset-plan.cc",
    "src/hb-subset-plan.hh",
    "src/hb-subset-private.hh",
    "src/hb-subset.cc",
    "src/hb-subset.h",
    "src/hb-subset.hh",
    "src/hb-subset-input.hh",
    "src/hb-unicode-private.hh",
    "src/hb-unicode.cc",
    "src/hb-unicode.h",
    "src/hb-utf-private.hh",
    "src/hb-version.h",
    "src/hb-warning.cc",
    "src/hb.h",
    "src/hb.hh",
  ]

  defines = [
    "HAVE_OT",
    "HAVE_ICU",
    "HAVE_ICU_BUILTIN",
  ]

  if (is_mac) {
    sources += [
      "src/hb-coretext.cc",
      "src/hb-coretext.h",
    ]
    defines += [ "HAVE_CORETEXT" ]
  }

  configs += [ ":harfbuzz_warnings" ]

  # Without this modification, almost everything ends up hidden in the shared library, making it
  # useless for linking.
  if (current_toolchain == shlib_toolchain) {
    # Avoid failure when subtracting if not already present.
    configs += ["//build/config:symbol_visibility_hidden"]
    configs -= ["//build/config:symbol_visibility_hidden"]
  }

  public_configs = [ ":harfbuzz_config" ]

  deps = [
    "//third_party/icu:icuuc",
    "//third_party/freetype2"
  ]
}

static_library("harfbuzz") {
  output_name = "harfbuzz"
  public_deps = [
    ":harfbuzz_sources"
  ]
}

shared_library("harfbuzz_shared") {
  output_name = "harfbuzz"
  public_deps = [
    ":harfbuzz_sources",
  ]
}
