# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

copy("copyfiles") {
  sources = [
    "en.h",
    "error.h",
  ]
  outputs = ["$target_gen_dir/../../include/rapidjson/error/{{source_file_part}}"]
}
