# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

copy("copyfiles") {
  sources = [
    "biginteger.h",
    "diyfp.h",
    "dtoa.h",
    "ieee754.h",
    "itoa.h",
    "meta.h",
    "pow10.h",
    "regex.h",
    "stack.h",
    "strfunc.h",
    "strtod.h",
    "swap.h",
  ]
  outputs = ["$target_gen_dir/../../include/rapidjson/internal/{{source_file_part}}"]
}
